<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.muhammadahsan.quizapplication.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Computer Quizs"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:textStyle="italic"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quiz1"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_1">

        <RadioButton
            android:id="@+id/rb_ans_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_a1"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/rb_q1_a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_a2"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/rb_q1_a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_a3"
            android:textSize="16sp"/>

    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quiz2"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_2">

        <RadioButton
            android:id="@+id/rb_q1_a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_a1"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/rb_ans_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_a2"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/rb_q2_a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_a3"
            android:textSize="16sp"/>

    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quiz3"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_3">

        <RadioButton
            android:id="@+id/rb_q3_a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a1"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/rb_ans_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a2"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/rb_q3_a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a3"
            android:textSize="16sp"/>

    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:id="@+id/btn_submit"
        android:onClick="chk_validation"/>
</LinearLayout>
</ScrollView>
</LinearLayout>
